--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vinxi": "0.4.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/parser": "^6.7.4",
