--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-icons": "~1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.15",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "@tanstack/react-router": "^1.76.3",
     "@tanstack/react-router-with-query": "^1.76.3",
     "@tanstack/router-devtools": "^1.76.3",
