--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently -r npm:dev:web npm:dev:db",
+    "dev": "npx convex run messages:seed --push && concurrently -r npm:dev:web npm:dev:db",
     "dev:web": "vinxi dev",
     "dev:db": "npx convex dev",
     "build": "vinxi build",
