--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npx convex run messages:seed --push && concurrently -r npm:dev:web npm:dev:db",
-    "dev:web": "vinxi dev",
-    "dev:db": "npx convex dev",
+    "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
     "lint": "prettier --check '**/*' --ignore-unknown && eslint --ext .ts,.tsx ./app",
@@ -16,7 +14,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@convex-dev/react-query": "^0.0.0-alpha.7",
     "@radix-ui/react-icons": "~1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.15",
@@ -28,7 +25,6 @@
     "@vitejs/plugin-react": "^4.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "1.2.1",
-    "convex": "^1.17.0",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
